Update and rename SBI1.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="hackfest.css">
+    <link rel="stylesheet" href=".\sbi1.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="icon" type="image/x-icon" href=".mercy\ssss.ico">
@@ -30,16 +30,16 @@
     <DIV class="intro">
         <table border="2" width="100%" bgcolor="skyblue" height=10% aria-colspan="10px" aria-level="center">
             <tr>
-                <th width="20%" font color="white" size="4"><a href="C:\Users\dhruvi computer\Desktop\PROJECT\forms.html" target="_blank">NEW REGISTRATION</a></font>
+                <th width="20%" font color="white" size="4"><a href=".\sbi\forms.html" target="_blank">NEW REGISTRATION</a></font>
                 </th>
                 <th width="20%">
-                    <font color="white" size="4"><a href="SBI.HTML" target="_blank"> VOICE SECURITY</a></font>
+                    <font color="white" size="4"><a href=".\sbi\SBI.HTML" target="_blank"> VOICE SECURITY</a></font>
                 </th>
                 <th width="20%">
-                    <font color="white" size="4"><a href="companies.html" target="_blank">BENIFITES</a></font>
+                    <font color="white" size="4"><a href=".\sbi\companies.html" target="_blank">BENIFITES</a></font>
                 </th>
                 <th width="20%">
-                    <font color="white" size="4"><a href="C:\Users\dhruvi computer\Desktop\PROJECT\quiz.html" target="_blank">BRANCHES</a></font>
+                    <font color="white" size="4"><a href=".\sbi\quiz.html" target="_blank">BRANCHES</a></font>
                 </th>
             </tr>
         </table>
@@ -75,18 +75,18 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="S1.PNG" alt="Los Angeles" height="500px" width="300px">
+                    <img src=".\sbi\S1.PNG" alt="Los Angeles" height="500px" width="300px">
                 </div>
 
                 <div class="item">
-                    <img src="S2.PNG" alt="Chicago">
+                    <img src=".\sbi\S2.PNG" alt="Chicago">
                 </div>
 
                 <div class="item">
-                    <img src="S3.PNG" alt="New york">
+                    <img src=".\sbi\S3.PNG" alt="New york">
                 </div>
                 <div class="item">
-                    <img src="S4.PNG" alt="Chicago">
+                    <img src=".\sbi\S4.PNG" alt="Chicago">
                 </div>
 
 
