--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <p>
                     <br />
                     <label>
-                DO Y0U WANT TO AGREE WITH ARE TERMS AND CONDITIONS  ::<br>
+                DO Y0U WANT TO AGREE WITH OUR TERMS AND CONDITIONS  ::<br>
             <input type="radio" name="rating" value="yes" />
             Yes
             </label>
